# trojmiasto-image-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
src/trojmiasto_image_downloader/: consoles.py  host_policies.py  main.py  main_async.py  metadata.py  parsing.py
